# chromolog

./: .gitignore  .prettierrc  README.md  index.html  pyproject.toml  setup.py
chromolog/: __init__.py  chromolog.py
docs/: README.md  index.html
tests/: test.py  test_local.py  test_with_pip.py
